# Recipe-Recommender

./: README.md  files.py  io_utils.py  main.py  openai_utils.py  pinecone_populate.py  pinecone_query.py  pyproject.toml  settings.py  suggestion.py
config/: settings.py
data/: almond-joy-smoothie.txt  apple-cinnamon-oatmeal.txt  balsamic-bruschetta.txt  balsamic-glazed-brussels-sprouts.txt  basil-pesto-chicken.txt  chicken-and-rice-casserole.txt  chocolate-dipped-strawberries.txt  classic-margherita-pizza.txt  creamy-coconut-curry.txt  creamy-mushroom-risotto.txt  garlic-herb-roasted-potatoes.txt  garlic-herb-salmon.txt  garlic-parmesan-asparagus.txt  honey-glazed-pork.txt  honey-glazed-salmon.txt  honey-lemon-chicken.txt  lemon-butter-pasta.txt  lemon-pepper-grilled-shrimp.txt  minty-pea-soup.txt  quinoa-vegetable-salad.txt  raspberry-almond-tart.txt  roasted-red-pepper-hummus.txt  roasted-veggie-platter.txt  rosemary-lamb-chops.txt  salmon-skillet.txt  sesame-noodle-bowl.txt  spaghetti-carbonara.txt  stuffed-bell-peppers.txt  teriyaki-beef-stir-fry.txt  vegan-lentil-soup.txt
embeddings/: llama.py  openai_utils.py
recipes/: io_utils.py  suggestion.py  tuscan-chicken.txt
utils/: files.py
